--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
       <!-- load bootstrap and fontawesome via CDN -->
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/font-awesome/4.0.0/css/font-awesome.css" />
+      <link rel="stylesheet" href="style/style.css" />
+
 
       <!-- SPELLS -->
       <!-- load angular and angular route via CDN -->
@@ -25,8 +27,8 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                    <li><a href="#about"><i class="fa fa-shield"></i> About</a></li>
-                    <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
+                    <li><a href="#documents"><i class="fa fa-shield"></i> Documents</a></li>
+                    <li><a href="#about"><i class="fa fa-comment"></i> About</a></li>
                 </ul>
             </div>
             </nav>
