--- a/pages/home.html
+++ b/pages/home.html
@@ -7,7 +7,7 @@
   <!-- https://docs.angularjs.org/api/ng/directive/ngSubmit -->
 
   <div ng-app="noteshareApp" ng-controller="signinController">
-      <form ng-submit="submit()">
+      <form ng-submit="submit()"">
         User name: <input type="text" ng-model="username">
         <br/><br/>
         Password: <input type="text" ng-model="password">
@@ -15,8 +15,14 @@
         <input type="submit" id="submit" value="Sign in" />
       </form>
 
+      {{ message }}
 
+      <br/>
+      <a href="#signup"><i class="fa fa-signup"></i>Need a new account?</a>
   </div>
+
+
+
 
 
 </div>
