--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
     <!DOCTYPE html>
   <html ng-app="noteshareApp">
     <head>
+      <!-- CSS REFERENCE: http://getbootstrap.com/css/ -->
+      <meta name="viewport" content="width=device-width, initial-scale=1">
       <!-- SCROLLS -->
       <!-- load bootstrap and fontawesome via CDN -->
       <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
@@ -24,6 +26,11 @@
                 <div class="navbar-header">
                     <a class="navbar-brand" href="/">Noteshare.io</a>
                 </div>
+
+                <ul class="nav navbar-nav navbar-left">
+                    <li><a href="#documents">DOCUMENTS</a></li>
+                    <li><a href="#newdocument">New</a></li>
+                </ul>
 
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
