--- a/index.html
+++ b/index.html
@@ -30,6 +30,19 @@
                 <ul class="nav navbar-nav navbar-left">
                     <li><a href="#documents">DOCUMENTS</a></li>
                     <li><a href="#newdocument">New</a></li>
+                </ul>1
+
+                <ul class="nav navbar-nav navbar-center" style="margin-left:3em;">
+                  <form class="form-horizontal" style="margin-top:14px;">
+                    <div class="form-group">
+                      <!-- http://fiddle.jshell.net/lsconyer/bktpzgre/1/light/ -->  
+                      <div ng-controller="searchController">
+                        <input ng-enter="doSearch(  )" ng-model="searchText" />
+                      </div>
+                      <!--<input type="text" class="form-control" id="search" ng-model="search" ng-enter="testFunction()">  -->
+
+                    </div>
+                  </form>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-right">
