Process JSON response to GET /documents?all and display list of document titles Note: document list is put in local storage by the searchController and extracted from it by the documentsController

--- a/pages/documents.html
+++ b/pages/documents.html
@@ -1,7 +1,7 @@
 <!-- documents.html -->
-    <div class="jumbotron text-center">
+    <div style="width:50%; min-width:300px;margin-left:auto; margin-right:auto;">
         <h1>Documents</h1>
 
-        <div>{{ text }}</div>
+        <p ng-repeat="title in titles">{{title}}</p>
 
     </div>
