If user clicks on title in document list, the document contents are displayed in the same window.

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <div class="form-group">
                       <!-- http://fiddle.jshell.net/lsconyer/bktpzgre/1/light/ -->
                       <div ng-controller="searchController">
-                        <input ng-enter="doSearch(  )" ng-model="searchText" />
+                        <input ng-enter="doSearch(  )" ng-model="searchText" placeholder=" search ..."/>
                       </div>
                       <!--<input type="text" class="form-control" id="search" ng-model="search" ng-enter="testFunction()">  -->
 
