--- a/pages/documents.html
+++ b/pages/documents.html
@@ -2,4 +2,6 @@
     <div style="width:50%; min-width:300px;margin-left:auto; margin-right:auto;">
         <h1>Documents</h1>
         <p ng-repeat="doc in docArray"><a href="#{{doc['url']}}">{{doc['title']}}</a></p>
+        <br/><br/>
+        <p> {{ text }} </p>
     </div>
