--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
                 <ul class="nav navbar-nav navbar-left">
                     <li><a href="#documents">DOCUMENTS</a></li>
                     <li><a href="#newdocument">New</a></li>
+                    <li><a href="#editdocument">Edit</a></li>
                 </ul>
 
                 <ul class="nav navbar-nav navbar-center" style="margin-left:3em;">
