--- a/pages/editdocument.html
+++ b/pages/editdocument.html
@@ -10,8 +10,11 @@
 
   <div class="col-md-8">
     <div style="margin-left:1em;">
-    <h2> {{ title }} </h2>
-    
+    <h2>{{ title }}</h2>
+
+   <button ng-click="updateDocument()">Save</button></p>
+
+
    <textarea ng-model="editText" style="height:90%"></textarea>
   </div>
 </div>
