--- a/pages/editdocument.html
+++ b/pages/editdocument.html
@@ -20,7 +20,7 @@
   <div class="col-md-4">
     <div style="margin-left:1em;">
       <h3>{{ title }}</h3>
-      <div style="width:90%;" ng-bind-html="renderedText()"></div>
+      <div style="width:90%;" ng-bind-html="renderedText()" elem-ready="reloadMathJax()"></div>
   </div>
 
 
