--- a/pages/documents.html
+++ b/pages/documents.html
@@ -11,7 +11,8 @@
   <div class="col-md-8">
     <div style="margin-left:1em;">
     <h2> {{ title }} </h2>
-    <p> {{ text }} </p>
+    <div ng-bind-html="renderedText()" elem-ready="reloadMathJax()"></div>
+
   </div>
 </div>
 
