--- a/pages/editdocument.html
+++ b/pages/editdocument.html
@@ -11,7 +11,7 @@
 
   <div class="col-md-4">
       <div style="margin-left:1em;">
-        <h3>{{ title }}</h3>
+        <input ng-model="editableTitle" type="text" id="editableTitle">
         <button ng-click="updateDocument()">Save</button></p>
         <textarea ng-model="editText" rows="30" style="width:90%;"></textarea>
       </div>
