--- a/test/html/service_example.html
+++ b/test/html/service_example.html
@@ -1,32 +1,29 @@
+
 <!DOCTYPE html>
 <html>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
 <body>
 <div ng-app="myApp" ng-controller="myCtrl">
 
-<p>A custom service with a method that prefixes a string with 'foobar'</p>
+<p>The hexadecimal value of 255 is:</p>
 
 <h1>{{hex}}</h1>
 
 </div>
 
-
+<p>A custom service whith a method that converts a given number into a hexadecimal number.</p>
 
 <script>
 var app = angular.module('myApp', []);
 
-app.service('foo', function() {
+app.service('hexafy', function() {
     this.myFunc = function (x) {
-        val = 'foobar: ' + x;
-        console.log(val)
-        return val;
+        return x.toString(16);
     }
 });
-
-app.controller('myCtrl', function($scope, foo) {
-  $scope.hex = foo.myFunc('files')
+app.controller('myCtrl', function($scope, hexafy) {
+  $scope.hex = hexafy.myFunc(255);
 });
-
 </script>
 
 </body>
