--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </script>
       <script src="script.js"></script>
     </head>
-    <body ng-controller="mainController">
+    <body ng-controller="MainController">
 
         <!-- HEADER AND NAVBAR -->
         <header>
