--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
 
   <!-- https://docs.angularjs.org/api/ng/directive/ngSubmit -->
 
-  <div ng-app="noteshareApp" ng-controller="signinController" style="width:50%; min-width:300px;margin-left:auto; margin-right:auto;">
+  <div ng-app="noteshareApp" ng-controller="SigninController" style="width:50%; min-width:300px;margin-left:auto; margin-right:auto;">
       <form ng-submit="submit()">
 
         <h1>Sign in</h1>
